--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "swiper": "^8.4.4",
     "tailwindcss": "^3.2.2"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "aos": "^3.0.0-beta.6"
+  }
 }
